[package]
name = "ff-cl-gen"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
description = "OpenCL code generator for prime-fields"
documentation = "https://docs.rs/ff-cl-gen"
edition = "2018"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"
repository = "https://github.com/filecoin-project/ff-cl-gen"

[dependencies]
ff = { version = "0.2.0", package = "fff" }
itertools = { version = "0.8.0" }

[dev-dependencies]
ocl = { version = "0.19.4", package = "fil-ocl"}
