[package]
name = "ec-gpu-gen"
version = "0.3.1"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
description = "Code generator for field and eliptic curve operations on the GPUs"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
repository = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"

[dependencies]
bitvec = "1.0.1"
crossbeam-channel = "0.5.1"
ec-gpu = "0.1.0"
ff = { version = "0.12.0", default-features = false }
group = "0.12.0"
log = "0.4.14"
num_cpus = "1.13.0"
once_cell = "1.8.0"
pairing = "0.22.0"
rayon = "1.5.1"
rust-gpu-tools = { version = "0.6.0", default-features = false, optional = true }
temp-env = "0.2.0"
thiserror = "1.0.30"
yastl = "0.1.2"

[dev-dependencies]
blstrs = { version = "0.5.0", features = ["gpu"] }
rand = "0.8"
lazy_static = "1.2"
tempfile = "3.2.0"
rand_core = "0.6.3"
rand_xorshift = "0.3.0"

[build-dependencies]
blstrs = "0.5.0"
ec-gpu = "0.1.0"
execute = "0.2.9"
hex = "0.4"
sha2 = "0.10"

[features]
default = ["cuda", "fft", "multiexp", "opencl"]
cuda = ["rust-gpu-tools/cuda"]
opencl = ["rust-gpu-tools/opencl"]
fft = []
multiexp = []
