[package]
name = "ec-gpu-gen"
version = "0.5.2"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2021"
description = "Code generator for field and eliptic curve operations on the GPUs"
homepage = "https://github.com/filecoin-project/ff-cl-gen"
repository = "https://github.com/filecoin-project/ff-cl-gen"
license = "MIT/Apache-2.0"

[dependencies]
bitvec = "1.0.1"
crossbeam-channel = "0.5.7"
ec-gpu = "0.2.0"
execute = "0.2.11"
ff = { version = "0.12.1", default-features = false }
group = "0.12.1"
hex = "0.4"
log = "0.4.17"
num_cpus = "1.15.0"
once_cell = "1.17.1"
rayon = "1.7.0"
rust-gpu-tools = { version = "0.6.1", default-features = false, optional = true }
sha2 = "0.10"
thiserror = "1.0.39"
yastl = "0.1.2"

[dev-dependencies]
# NOTE vmx 2022-07-07: Using the `__private_bench` feature of `blstrs` is just
# temporarily until https://github.com/zkcrypto/group/pull/29 is fixed. Then
# we won't need the exports of `Fp` and `Fp2` any more.
#blstrs = { version = "0.6.0", features = ["__private_bench"], optional = true }
blstrs = { version = "0.6.1", features = ["__private_bench", "gpu"] }
rand = "0.8"
lazy_static = "1.4"
pairing = "0.22.0"
temp-env = "0.2.0"
rand_core = "0.6.4"
rand_xorshift = "0.3.0"

[features]
default = []
cuda = ["rust-gpu-tools/cuda"]
opencl = ["rust-gpu-tools/opencl"]
