[package]
name = "gen-test"
version = "0.1.0"
authors = ["dignifiedquire <me@dignifiedquire.com>"]
edition = "2018"
publish = false

[dependencies]
ff-cl-gen = { path = "../" }
ff = "0.11.0"
blstrs = { git = "https://github.com/filecoin-project/blstrs", branch = "halo", features = ["gpu"] }
ocl = { version = "0.19.4", package = "fil-ocl"}
rand = "0.8"
lazy_static = "1.2"

