# NOTE vmx 2022-07-07: Using the `__private_bench` feature of `blstrs` is just temporarily until
# https://github.com/zkcrypto/group/pull/29 is fixed. Then we won't need the exports of `Fp` and
# `Fp2` any more.
[package]
name = "gpu-tests"
version = "0.1.0"
edition = "2021"
description = "Test for the ec-gpu project"
homepage = "https://github.com/filecoin-project/ec-gen"
repository = "https://github.com/filecoin-project/ec-gen"
license = "MIT/Apache-2.0"
publish = false

[dev-dependencies]
blstrs = { version = "0.6.0", features = ["__private_bench"] }
criterion = "0.3.6"
ec-gpu = "0.2"
ec-gpu-gen = { path = "../ec-gpu-gen", default-features = false }
ff = { version = "0.12.0", default-features = false }
fil_logger = "0.1.6"
group = "0.12.0"
pairing = "0.22.0"
rand = "0.8"
rayon = "1.5.3"

[build-dependencies]
blstrs = { version = "0.6.0", features = ["__private_bench"] }
ec-gpu-gen = { path = "../ec-gpu-gen" }

[features]
default = ["cuda", "opencl"]
cuda = ["blstrs/gpu", "ec-gpu-gen/cuda"]
opencl = ["blstrs/gpu", "ec-gpu-gen/opencl"]

[[bench]]
name = "multiexp"
harness = false
